--- a/app_admin/views/system/config/index.phtml
+++ b/app_admin/views/system/config/index.phtml
@@ -6,7 +6,7 @@
 	</tr>
 	<tr>
 		<td class="tright" width="120"><?php echo $Lang->_('sys_config_file');?>：</td>
-		<td>
+		<td id="textVal">
 			<div class="<?php echo $isWrite?'suc':'err';?>"><em></em><b>config/config.ini</b></div>
 		</td>
 	</tr>
