--- a/public/webmis/plugin/upload/dmuploader/dmuploader.webmis.css
+++ b/public/webmis/plugin/upload/dmuploader/dmuploader.webmis.css
@@ -3,10 +3,10 @@
 .WebMIS_Upload_input span{display: inline-block; cursor: pointer; background-color: #6FB737; color: #FFF; font-weight: bold; padding: 6px 20px; border-radius: 2px; box-shadow: 1px 1px 2px #666;}
 .WebMIS_Upload_input input{display: none;}
 .WebMIS_Upload_files{overflow: hidden; padding: 0 10px;}
-.WebMIS_Upload_files_ct{font-size: 12px; border: #DADCDF 1px solid; padding: 0 10px 6px 45px; margin-bottom: 10px; box-shadow: 1px 1px 1px #F2F2F2;
-	background:-moz-linear-gradient(top, #FFF,#FEFEFE);
-	background:-webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#F8F8F8));
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF,endColorstr=#F8F8F8,grandientType=1);
+.WebMIS_Upload_files_ct{font-size: 12px; border: #DADCDF 1px solid; padding: 5px 10px 15px 45px; margin-bottom: 10px; box-shadow: 1px 1px 1px #F2F2F2;
+	background:-moz-linear-gradient(top, #FFF,#F2F2F2);
+	background:-webkit-gradient(linear, 0 0, 0 100%, from(#FFF), to(#F2F2F2));
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF,endColorstr=#F2F2F2,grandientType=1);
 }
 .WebMIS_Upload_files_img{float: left; width: 35px; height: 35px; line-height: 35px; margin: 3px 0 0 -40px; text-align: center; color: #6fb737; background-size: contain; background-repeat: no-repeat; background-position: center center;}
 .WebMIS_Upload_files_img span{width: 100%; height: 100%; background-color: #F2F2F2; border-radius: 60px; display: block;}
