--- a/public/webmis/themes/default/webmis.css
+++ b/public/webmis/themes/default/webmis.css
@@ -3,6 +3,7 @@
 body,div,span,ul,li,table,tr,td,input,a,h1,h2,h3,h4{margin: 0; padding: 0;}
 body,textarea{font-family: ROCK,"\5FAE\8F6F\96C5\9ED1",helvetica,arial,sans-serif; font-size: 12px;}
 header,section,footer,aside{display: block;}
+img{border: none; vertical-align: top;}
 a{color: #007568; text-decoration: none;}
 a:hover{color: #FF6600;}
 /* 字体图标 */
