--- a/app_admin/views/system/config/index.phtml
+++ b/app_admin/views/system/config/index.phtml
@@ -1,4 +1,4 @@
-<?php $isWrite = is_writable(__DIR__.'/../../../config/config.ini');?>
+<?php $isWrite = is_writable(__DIR__.'/../../../config/config.php');?>
 <form action="<?php echo $this->url->get('SysConfig/Data');?>" method="post" id="Form">
 <table class="table_add">
 	<tr>
@@ -7,7 +7,7 @@
 	<tr>
 		<td class="tright" width="120"><?php echo $Lang->_('sys_config_file');?>：</td>
 		<td id="textVal">
-			<div class="<?php echo $isWrite?'suc':'err';?>"><em></em><b>config/config.ini</b></div>
+			<div class="<?php echo $isWrite?'suc':'err';?>"><em></em><b>config/config.php</b></div>
 		</td>
 	</tr>
 	<?php if($isWrite){?>
@@ -20,7 +20,7 @@
 	<tr>
 		<td class="tright"><?php echo $Lang->_('sys_config_copy');?>：</td>
 		<td>
-			<textarea name="copy" style="width: 420px; height: 80px;" maxlength="200"><?php echo $Config->webmis->appCopy;?></textarea>
+			<textarea name="copy" style="float: left; width: 420px; height: 80px;" maxlength="200"><?php echo $Config->webmis->appCopy;?></textarea>
 		</td>
 	</tr>
 	<tr>
@@ -113,37 +113,37 @@ foreach ($arr as $val){
 	<tr>
 		<td class="tright"><?php echo $Lang->_('sys_config_app_c');?>：</td>
 		<td>
-			<input type="text" name="cDir" class="input" style="width: 100px;" value="<?php echo $Config->application->controllersDir;?>" />
+			<input type="text" name="cDir" class="input" style="width: 160px;" value="<?php echo $Config->application->controllersDir;?>" />
 		</td>
 	</tr>
 	<tr>
 		<td class="tright"><?php echo $Lang->_('sys_config_app_m');?>：</td>
 		<td>
-			<input type="text" name="mDir" class="input" style="width: 100px;" value="<?php echo $Config->application->modelsDir;?>" />
+			<input type="text" name="mDir" class="input" style="width: 160px;" value="<?php echo $Config->application->modelsDir;?>" />
 		</td>
 	</tr>
 	<tr>
 		<td class="tright"><?php echo $Lang->_('sys_config_app_v');?>：</td>
 		<td>
-			<input type="text" name="vDir" class="input" style="width: 100px;" value="<?php echo $Config->application->viewsDir;?>" />
+			<input type="text" name="vDir" class="input" style="width: 160px;" value="<?php echo $Config->application->viewsDir;?>" />
 		</td>
 	</tr>
 	<tr>
 		<td class="tright"><?php echo $Lang->_('sys_config_app_f');?>：</td>
 		<td>
-			<input type="text" name="fDir" class="input" style="width: 100px;" value="<?php echo $Config->application->formsDir;?>" />
+			<input type="text" name="fDir" class="input" style="width: 160px;" value="<?php echo $Config->application->formsDir;?>" />
 		</td>
 	</tr>
 	<tr>
 		<td class="tright"><?php echo $Lang->_('sys_config_app_l');?>：</td>
 		<td>
-			<input type="text" name="lDir" class="input" style="width: 100px;" value="<?php echo $Config->application->libraryDir;?>" />
+			<input type="text" name="lDir" class="input" style="width: 160px;" value="<?php echo $Config->application->libraryDir;?>" />
 		</td>
 	</tr>
 	<tr>
 		<td class="tright"><?php echo $Lang->_('sys_config_app_b');?>：</td>
 		<td>
-			<input type="text" name="bDir" class="input" style="width: 100px;" value="<?php echo $Config->application->baseUri;?>" />
+			<input type="text" name="bDir" class="input" style="width: 160px;" value="<?php echo $Config->application->baseUri;?>" />
 		</td>
 	</tr>
 	<tr>
