--- a/app_admin/views/system/admin/add.phtml
+++ b/app_admin/views/system/admin/add.phtml
@@ -39,6 +39,12 @@
 		</td>
 	</tr>
 	<tr>
+		<td class="tright"><?php echo $Lang->_('sys_admin_tel');?>:</td>
+		<td>
+			<input type="text" name="tel" class="input" style="width: 70%;" tel="true" required />
+		</td>
+	</tr>
+	<tr>
 		<td colspan="2"><b><?php echo $Lang->_('sys_admin_show');?></b></td>
 	</tr>
 	<tr>
