--- a/app_admin/views/system/admin/sea.phtml
+++ b/app_admin/views/system/admin/sea.phtml
@@ -24,6 +24,12 @@
 		</td>
 	</tr>
 	<tr>
+		<td class="tright"><?php echo $Lang->_('sys_admin_tel');?>:</td>
+		<td>
+			<input type="text" name="tel" class="input" style="width: 80%;" value="<?php echo @$_GET['tel'];?>" />
+		</td>
+	</tr>
+	<tr>
 		<td class="tright"><?php echo $Lang->_('sys_admin_name');?>:</td>
 		<td>
 			<input type="text" name="name" class="input" style="width: 30%;" value="<?php echo @$_GET['name'];?>" />
