--- a/app_admin/views/layouts/default/login.phtml
+++ b/app_admin/views/layouts/default/login.phtml
@@ -21,30 +21,30 @@
 		</ul>
 	</div>
 	<!--	Longin -->
-	<h1 id="webmisVersion" class="login_title">WebMIS</h1>
 	<div class="login_body">
+		<h1 id="webmisVersion" class="login_title">WebMIS</h1>
 		<div class="login_ct">
 			<dl class="login">
 				<dt><?php echo $incLang->_('inc_uname');?>：</dt>
-				<dd><input type="text" id="uname" class="login_input" value="webmis" /></dd>
+				<dd><input type="text" id="uname" class="login_input" value="webmis" placeholder="<?php echo $incLang->_('inc_user');?>" /></dd>
 				<dt><?php echo $incLang->_('inc_passwd');?>：</dt>
-				<dd><input type="password" id="passwd" class="login_input" value="ksphp.com" /></dd>
+				<dd><input type="password" id="passwd" class="login_input" value="ksphp.com" placeholder="<?php echo $incLang->_('inc_pwdinfo');?>" /></dd>
 			</dl>
 			<a href="#" id="adminLogin" class="sub"><?php echo $incLang->_('inc_login');?></a>
 		</div>
-	</div>
-	<div class="login_copy">
-		Copyright © <?php echo APP_COPY;?> All rights are reserved.<br>
-		<a href="<?php echo $this->url->get('../');?>" ><?php echo $incLang->_('inc_home');?></a>&nbsp;|&nbsp;
-		<a href="<?php echo $this->url->get('?mode=pc');?>" ><?php echo $incLang->_('inc_pc');?></a>&nbsp;|&nbsp;
-		<a href="<?php echo $this->url->get('?mode=mobile');?>" id="QRCodeCT" class="qrcode">
-			<em class="ico-qrcode"></em>
-			<span><?php echo $incLang->_('inc_mobile');?></span>
-			<div class="qrcode_ct">
-				<div class="arrow"></div>
-				<div id="QRCode" class="ct"></div>
-			</div>
-		</a>
+		<div class="login_copy">
+			Copyright © <?php echo APP_COPY;?> All rights are reserved.<br>
+			<a href="<?php echo $this->url->get('../');?>" ><?php echo $incLang->_('inc_home');?></a>&nbsp;|&nbsp;
+			<a href="<?php echo $this->url->get('?mode=pc');?>" ><?php echo $incLang->_('inc_pc');?></a>&nbsp;|&nbsp;
+			<a href="<?php echo $this->url->get('?mode=mobile');?>" id="QRCodeCT" class="qrcode">
+				<em class="ico-qrcode"></em>
+				<span><?php echo $incLang->_('inc_mobile');?></span>
+				<div class="qrcode_ct">
+					<div class="arrow"></div>
+					<div id="QRCode" class="ct"></div>
+				</div>
+			</a>
+		</div>
 	</div>
 <div id="base_url" style="display: none;"><?php echo $this->url->get();?></div>
 <div id="IsMobile" style="display: none;"><?php echo $this->session->get('IsMobile');?></div>
