--- a/app_admin/views/layouts/default/login_m.phtml
+++ b/app_admin/views/layouts/default/login_m.phtml
@@ -23,27 +23,27 @@
 		</ul>
 	</div>
 	<!--	Longin -->
-	<h1 id="webmisVersion" class="login_title">WebMIS</h1>
 	<div class="login_body">
+		<h1 id="webmisVersion" class="login_title">WebMIS</h1>
 		<ul class="login_ct">
 			<li>
 				<label><em class="ico-user"></em></label>
-				<input type="text" id="uname" value="webmis" />
+				<input type="text" id="uname" value="webmis" placeholder="<?php echo $incLang->_('inc_user');?>" />
 			</li>
 			<li>
 				<label><em class="ico-pwd"></em></label>
-				<input type="password" id="passwd" value="ksphp.com" />
+				<input type="password" id="passwd" value="ksphp.com" placeholder="<?php echo $incLang->_('inc_pwdinfo');?>" />
 			</li>
 			<li class="sub">
 				<a href="#" id="adminLogin"><?php echo $incLang->_('inc_login');?></a>
 			</li>
 		</ul>
-	</div>
-	<div class="login_copy">
-		Copyright © <?php echo APP_COPY;?> All rights are reserved.<br>
-		<a href="<?php echo $this->url->get('../');?>" ><?php echo $incLang->_('inc_home');?></a>&nbsp;|&nbsp;
-		<a href="<?php echo $this->url->get('?mode=pc');?>" ><?php echo $incLang->_('inc_pc');?></a>&nbsp;|&nbsp;
-		<a href="<?php echo $this->url->get('?mode=mobile');?>" ><?php echo $incLang->_('inc_mobile');?></a>
+		<div class="login_copy">
+			Copyright © <?php echo APP_COPY;?> All rights are reserved.<br>
+			<a href="<?php echo $this->url->get('../');?>" ><?php echo $incLang->_('inc_home');?></a>&nbsp;|&nbsp;
+			<a href="<?php echo $this->url->get('?mode=pc');?>" ><?php echo $incLang->_('inc_pc');?></a>&nbsp;|&nbsp;
+			<a href="<?php echo $this->url->get('?mode=mobile');?>" ><?php echo $incLang->_('inc_mobile');?></a>
+		</div>
 	</div>
 <div id="base_url" style="display: none;"><?php echo $this->url->get();?></div>
 <div id="IsMobile" style="display: none;"><?php echo $this->session->get('IsMobile');?></div>
