--- a/app_admin/views/system/admin/index.phtml
+++ b/app_admin/views/system/admin/index.phtml
@@ -12,6 +12,7 @@
 		<td width="60">ID</td>
 		<td width="120"><?php echo $Lang->_('sys_admin_uname');?></td>
 		<td><?php echo $Lang->_('sys_admin_email');?></td>
+		<td><?php echo $Lang->_('sys_admin_tel');?></td>
 		<td width="80"><?php echo $Lang->_('sys_admin_name');?></td>
 		<td width="80"><?php echo $Lang->_('sys_admin_dept');?></td>
 		<td width="120"><?php echo $Lang->_('sys_admin_position');?></td>
@@ -26,6 +27,7 @@
 		<td><?php echo $val->id;?></td>
 		<td><b><?php echo $this->inc->keyHH($val->uname,@$_GET['uname']);?></b></td>
 		<td><?php echo $this->inc->keyHH($val->email,@$_GET['email']);?></td>
+		<td><?php echo $this->inc->keyHH($val->tel,@$_GET['tel']);?></td>
 		<td><?php echo $this->inc->keyHH($val->name,@$_GET['name']);?></td>
 		<td><?php echo $this->inc->keyHH($val->department,@$_GET['department']);?></td>
 		<td><?php echo $this->inc->keyHH($val->position,@$_GET['position']);?></td>
