--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -27,23 +27,23 @@ label.error{float: left; line-height: 20px; padding: 5px 0;}
 label.error em{float: left; padding-left: 5px;}
 
 /* Lang */
-.lang_ct{position: absolute; z-index: 10; cursor: pointer; width: 140px; height: 28px; line-height: 28px; background-color: rgba(0,0,0,0.5); color: #FFF; text-align: center; border-radius: 5px; top: 10px; right: 10px;}
+.lang_ct{position: absolute; z-index: 10; cursor: pointer; width: 140px; height: 28px; line-height: 28px; background-color: rgba(0,0,0,0.5); color: #FFF; text-align: center; border-radius: 5px; top: 20px; right: 15px;}
 .lang{display: none; position: absolute; width: 140px; background-color: rgba(0,0,0,0.5); border-radius: 5px; padding: 8px 0; border-top: #333 1px solid; border-bottom: #333 1px solid;}
 .lang li a{color: #FFF; text-align: left; padding-left: 10px; display: block;}
 .lang li a:hover{background-color: #6FB737;}
 
 /* login */
-.body_login{background: url("images/bg.png") #2D2D2D center center;}
-.login_title{font-size: 38px; height: 50px; line-height: 50px; color: #DFE1E8; text-align: center; padding: 15px 0; min-width: 460px;}
-.login_body{overflow: hidden; border-top: #555 1px solid; border-bottom: #555 1px solid; background-color: #3D3D3D; padding: 24px 0;}
-.login_ct{width: 460px; margin: 0 auto; color: #DFE1E8;}
+.body_login{background: url("images/bg.png") #2D2D2D center center; background-size: 0.8%; min-width: 420px;}
+.login_title{position: absolute; width: 100%; font-size: 38px; height: 60px; line-height: 60px; color: #DFE1E8; text-align: center; min-width: 420px; margin-top: -85px;}
+.login_body{position: absolute; width: 100%; min-width: 420px; height: 100px; background-color: #3D3D3D; padding-top: 24px; top: 50%; margin-top: -62px;}
+.login_ct{max-width: 420px; margin: 0 auto; color: #DFE1E8;}
 .login_ct .login{float: left; width: 330px;}
 .login_ct .login dt{float: left; width: 90px; line-height: 25px; text-align: right; padding: 4px;}
 .login_ct .login dd{line-height: 25px; padding: 4px 0;}
-.login_ct .login_input{border: none; width: 210px; height: 25px; line-height: 25px; border: #222 1px solid; background-color: #DFE1E8; padding: 0 5px;}
-.login_ct .sub{float: left; width: 60px; line-height: 60px; margin-top: 4px; display: inline-block; background-color: #6FB737; color: #FFF; text-align: center; box-shadow: 1px 1px 2px #000; border-radius: 3px;}
+.login_ct .login_input{border: none; width: 210px; height: 25px; line-height: 25px; font-size: 14px; border: #333 1px solid; background-color: #DFE1E8; padding: 0 5px;}
+.login_ct .sub{float: left; width: 62px; line-height: 62px; margin-top: 4px; display: inline-block; background-color: #6FB737; color: #FFF; text-align: center; box-shadow: 1px 1px 2px #000; border-radius: 3px;}
 .login_ct .sub:hover{background-color: #390;}
-.login_copy{height: 50px; line-height: 20px; color: #CCC; text-align: center; padding: 15px 0; border-radius: 5px; min-width: 460px;}
+.login_copy{position: absolute; width: 100%; height: 50px; line-height: 20px; color: #CCC; text-align: center; padding: 15px 0; border-radius: 5px; min-width: 420px; margin-top: 100px;}
 .login_copy a{color: #DFE1E8;}
 .login_copy a:hover{color: #FF6600;}
 .login_copy .qrcode{display: inline-block; padding-left: 18px;}
