--- a/public/themes/admin/default/main_m.css
+++ b/public/themes/admin/default/main_m.css
@@ -33,17 +33,17 @@ label.error em{float: left; padding-left: 5px;}
 .lang li a:hover{background-color: #6FB737;}
 
 /* login */
-.body_login{background: url("images/bg.png") #2D2D2D center center;}
-.login_title{font-size: 38px; height: 50px; line-height: 50px; color: #DFE1E8; text-align: center; padding: 15px 0;}
-.login_body{overflow: hidden; border-top: #555 1px solid; border-bottom: #555 1px solid; background-color: #3D3D3D; padding: 24px 0;}
+.body_login{background: url("images/bg.png") #2D2D2D center center; background-size: 3%; min-width: 320px;}
+.login_title{position: absolute; width: 100%; font-size: 38px; height: 60px; line-height: 60px; color: #DFE1E8; text-align: center; min-width: 320px; margin-top: -85px;}
+.login_body{position: absolute; width: 100%; min-width: 320px; height: 180px; background-color: #3D3D3D; padding-top: 24px; top: 50%; margin-top: -102px;}
 .login_ct{max-width: 320px; margin: 0 auto; color: #DFE1E8;}
 .login_ct li{padding: 6px 15px;}
-.login_ct li input{text-indent: 32px; width: 99%; height: 30px; line-height: 30px; border: #222 1px solid; font-size: 1.4em; background-color: #DFE1E8;}
+.login_ct li input{text-indent: 32px; width: 99%; height: 30px; line-height: 30px; border: #222 1px solid; font-size: 14px; background-color: #DFE1E8;}
 .login_ct li label em{position: absolute; z-index: 1; font-size: 20px; color: #999; margin: 6px 0 0 8px;}
 .login_ct .sub{padding-top: 15px; font-size: 1.2em;}
 .login_ct .sub a{width: 100%; line-height: 42px; display: inline-block; background-color: #6FB737; color: #FFF; text-align: center; box-shadow: 1px 1px 2px #000; border-radius: 3px;}
 .login_ct .sub a:hover{background-color: #390;}
-.login_copy{height: 50px; line-height: 20px; color: #CCC; text-align: center; padding: 15px 0; border-radius: 5px;}
+.login_copy{position: absolute; width: 100%; height: 50px; line-height: 20px; color: #CCC; text-align: center; padding: 15px 0; border-radius: 5px; min-width: 320px; margin-top: 30px;}
 .login_copy a{color: #DFE1E8;}
 .login_copy a:hover{color: #FF6600;}
 
