--- a/public/webmis/plugin/upload/dmuploader/dmuploader.webmis.css
+++ b/public/webmis/plugin/upload/dmuploader/dmuploader.webmis.css
@@ -18,7 +18,7 @@
 .WebMIS_Upload_files_load{overflow: hidden; height: 12px; background-color: #F2F2F2; box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;}
 @keyframes WebMIS_Upload_files_barBG{from{background-position:40px 0}to{background-position:0 0}}
 @-webkit-keyframes WebMIS_Upload_files_barBG{from{background-position:40px 0}to{background-position:0 0}}
-.WebMIS_Upload_files_bar{height: 12px; line-height: 12px; font-size: 12px; text-align: right; color: #FFF; background-color: #6FB737; box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;
+.WebMIS_Upload_files_bar{height: 12px; font-size: 12px; text-align: right; color: #FFF; background-color: #6FB737; box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1) inset;
 	background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 	background-size: 40px 40px;
 	animation: WebMIS_Upload_files_barBG 2s linear infinite;
