--- a/app_admin/views/layouts/default/login.phtml
+++ b/app_admin/views/layouts/default/login.phtml
@@ -11,6 +11,7 @@
 </head>
 
 <body class="body_login">
+	<!--[if lt IE 9]><div class="isIE"><p><b>浏览器版本过低</b><br>请使用IE9以上或chrome、firefox、safari等最新版浏览器！</p></div><![endif]-->
 	<!--	Lang -->
 	<div id="Lang" class="lang_ct">
 		<?php echo $LangName;?>
