--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -11,6 +11,9 @@ textarea{border: #999 1px solid; background: #FFF; padding: 5px;}
 input:focus, textarea:focus{box-shadow: 0 0 6px rgba(153, 153, 153, 0.7);}
 
 /* INC */
+.isIE{position: absolute; z-index: 100; width: 100%; height: 100%; text-align: center; background-color: #3A3C3F; color: #FFF;}
+.isIE p{position: absolute; top: 42%; left: 0; right: 0; font-size: 14px; line-height: 36px;}
+.isIE b{font-size: 24px;}
 .left{float: left;}.right{float: right;}.tleft{text-align: left;}.tright{text-align: right;}.center{text-align: center;}
 .red{color: red;}.green{color: green;}.c1{color: #666;}.c2{color: #999;}
 .input{float: left; height: 30px; line-height: 30px; border: #999 1px solid; background: #FFF; display: inline-block; padding: 0 5px;}
@@ -55,7 +58,7 @@ label.error em{float: left; padding-left: 5px;}
 
 /* Top */
 .top_body{position: fixed; width: 100%; height: 50px; background-color: #3D3D3D; overflow: hidden;}
-.top_logo{float: left; width: 200px; height: 40px; background: url("images/logo.png") no-repeat center 5px; display: inline-block; margin-top: 5px;}
+.top_logo{float: left; width: 200px; height: 50px; background: url("images/logo.png") no-repeat center 9px; background-size: 72%; display: inline-block;}
 .top_nav li{float: left; line-height: 50px;}
 .top_nav li a{float: left; padding: 0 20px; text-align: center; display: inline-block;}
 .top_nav li em{float: left; font-size: 28px;}
