--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -57,7 +57,7 @@ label.error em{float: left; padding-left: 5px;}
 .login_copy .qrcode_ct .ct{width: 100px; height: 100px; background-color: #FFF; padding: 8px; box-shadow: 0 0 2px #333;}
 
 /* Top */
-.top_body{position: fixed; width: 100%; height: 50px; background-color: #3D3D3D; overflow: hidden;}
+.top_body{position: fixed; width: 100%; height: 50px; background-color: #3D3D3D;}
 .top_logo{float: left; width: 200px; height: 50px; background: url("images/logo.png") no-repeat center 9px; background-size: 72%; display: inline-block;}
 .top_nav li{float: left; line-height: 50px;}
 .top_nav li a{float: left; padding: 0 20px; text-align: center; display: inline-block;}
@@ -71,9 +71,20 @@ label.error em{float: left; padding-left: 5px;}
 .nav_an2:hover{color: #BBB; background-color: #222;}
 .nav_an2:hover span{display: block;}
 
-.top_link{position: absolute; z-index: 1; right: 0px; line-height: 50px; color: #999; padding: 0 10px;}
-.top_link a{color: #6FB737;}
-.top_link a:hover{color: #FF6600;}
+.top_link{position: absolute; z-index: 1; right: 10px; height: 50px; color: #999; padding: 0 10px;}
+.top_link span{float: left; line-height: 50px;}
+.top_link .uname{font-size: 14px; font-weight: bold; padding-right: 10px;}
+.top_link .icon{width: 36px; height: 36px; line-height: 36px; text-align: center; background-color: #222; margin-top: 6px; border-radius: 18px;}
+.top_link .icon em:before{content: "\e6a1"; font-size: 24px;}
+.top_link:hover{background-color: #222;}
+.top_link:hover .icon{background-color: #6FB737;}
+.top_link:hover em{color: #FFF;}
+.top_link .info{display: none; position: absolute; z-index: 2; right: 0px; top: 50px; background-color: rgba(0,0,0,0.87);}
+.top_link .info .ct{padding: 10px; line-height: 24px;}
+.top_link .info a{float: left; display: inline-block; min-width: 200px; line-height: 36px; font-size: 14px; color: #6FB737; padding: 0 10px;}
+.top_link .info a:hover{color: #FF6600; background-color: #3D3D3D;}
+.top_link .info .btop{border-top: #3D3D3D 1px solid;}
+.top_link:hover .info{display: block;}
 
 /* Content */
 .ct_body{overflow: hidden; padding-top: 50px;}
