--- a/app_admin/views/layouts/default/login.phtml
+++ b/app_admin/views/layouts/default/login.phtml
@@ -29,7 +29,7 @@
 				<dt><?php echo $incLang->_('inc_uname');?>：</dt>
 				<dd><input type="text" id="uname" class="login_input" value="webmis" placeholder="<?php echo $incLang->_('inc_user');?>" /></dd>
 				<dt><?php echo $incLang->_('inc_passwd');?>：</dt>
-				<dd><input type="password" id="passwd" class="login_input" value="ksphp.com" placeholder="<?php echo $incLang->_('inc_pwdinfo');?>" /></dd>
+				<dd><input type="password" id="passwd" class="login_input" value="webmis" placeholder="<?php echo $incLang->_('inc_pwdinfo');?>" /></dd>
 			</dl>
 			<a href="#" id="adminLogin" class="sub"><?php echo $incLang->_('inc_login');?></a>
 		</div>
