--- a/app_admin/views/layouts/default/login_m.phtml
+++ b/app_admin/views/layouts/default/login_m.phtml
@@ -32,7 +32,7 @@
 			</li>
 			<li>
 				<label><em class="ico-pwd"></em></label>
-				<input type="password" id="passwd" value="ksphp.com" placeholder="<?php echo $incLang->_('inc_pwdinfo');?>" />
+				<input type="password" id="passwd" value="webmis" placeholder="<?php echo $incLang->_('inc_pwdinfo');?>" />
 			</li>
 			<li class="sub">
 				<a href="#" id="adminLogin"><?php echo $incLang->_('inc_login');?></a>
