--- a/app_admin/views/help/system/index.phtml
+++ b/app_admin/views/help/system/index.phtml
@@ -1,1 +1,1 @@
-<iframe src="http://www.ksphp.com/docs/Phalcon" style="width: 100%; height: 100%; border: none;"></iframe>
+<iframe src="https://docs.phalconphp.com/en/latest/index.html" style="width: 100%; height: 100%; border: none;"></iframe>
