--- a/app_m/views/errors/show500.phtml
+++ b/app_m/views/errors/show500.phtml
@@ -1,4 +1,4 @@
-<div style="border: #DADCDF 1px solid; background-color: #FFF; padding: 20px; margin: 10px;">
-	<h1>No Fond 500</h1>
-	对不起！没有发现相关资源！
+<div style="font-size: 14px; line-height: 20px; border: #DADCDF 1px solid; background-color: #FFF; padding: 20px;">
+	<h2>Internal Server Error 500</h2>
+	对不起！服务器内部错误
 </div>
