--- a/app_admin/views/help/system/index_m.phtml
+++ b/app_admin/views/help/system/index_m.phtml
@@ -1,1 +1,1 @@
-<iframe src="https://ksphp.github.io/" class="web_iframe" style="width: 100%; height: 100%; border: none;"></iframe>
+<div class="html"><?php echo $Lang->_('help_ct');?></div>
