--- a/app_admin/views/errors/show404.phtml
+++ b/app_admin/views/errors/show404.phtml
@@ -1,4 +1,4 @@
-<div style="font-size: 14px; line-height: 20px; border: #DADCDF 1px solid; background-color: #FFF; padding: 20px;">
+<div class="error">
 	<h2>No Fond 404</h2>
 	对不起！没有发现相关资源
 </div>
