--- a/app_admin/views/layouts/default/error.phtml
+++ b/app_admin/views/layouts/default/error.phtml
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="ksphp" />
-	<title>WebMIS信息提示</title>
+	<title>信息提示 | WebMIS</title>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	<link href="/themes/admin/<?php echo APP_THEMES;?>/error.css" rel="stylesheet" type="text/css" />
 </head>
