--- a/app_admin/views/errors/show500.phtml
+++ b/app_admin/views/errors/show500.phtml
@@ -1,4 +1,4 @@
-<div style="font-size: 14px; line-height: 20px; border: #DADCDF 1px solid; background-color: #FFF; padding: 20px;">
+<div class="error">
 	<h2>Internal Server Error 500</h2>
 	对不起！服务器内部错误
 </div>
