--- a/public/themes/admin/default/main.css
+++ b/public/themes/admin/default/main.css
@@ -2,7 +2,7 @@
 /* Default */
 body,div,span,ul,li,table,tr,td,input,a,p,h1,h2,h3,h4,dl{margin: 0; padding: 0;}
 body,.top_body{min-width: 640px;}
-body,textarea{color: #333;}
+body,textarea{color: #333; overflow: hidden;}
 header,section,footer,aside{display: block;}
 img{border: none; vertical-align: top;}
 ul{list-style: none;}
@@ -37,7 +37,7 @@ label.error em{float: left; padding-left: 5px;}
 .lang li a:hover{background-color: #6FB737;}
 
 /* login */
-.body_login{background: url("images/bg.png") #2D2D2D center center; background-size: 0.8%; min-width: 420px;}
+.body_login{min-width: 640px; min-height: 360px; background: url("images/bg.png") #2D2D2D center center; background-size: 0.8%;}
 .login_title{position: absolute; width: 100%; font-size: 38px; height: 60px; line-height: 60px; color: #DFE1E8; text-align: center; min-width: 420px; margin-top: -85px;}
 .login_body{position: absolute; width: 100%; min-width: 420px; height: 100px; background-color: #3D3D3D; padding-top: 24px; top: 50%; margin-top: -62px;}
 .login_ct{max-width: 420px; margin: 0 auto; color: #DFE1E8;}
@@ -88,9 +88,9 @@ label.error em{float: left; padding-left: 5px;}
 .top_link:hover .info{display: block;}
 
 /* Content */
-.ct_body{overflow: hidden; padding-top: 50px;}
-.ct_left{overflow-y: auto; float: left; width: 200px; background: #F5F5F5; padding: 10px 0; box-shadow: -1px 0px 0px #CCC inset;}
-.ct_right{overflow-y: auto; background: #FFF; margin-left: 200px; padding: 10px;}
+.ct_body{overflow: hidden; height: 100%; padding-top: 50px;}
+.ct_left{overflow-y: auto; float: left; width: 200px; height: 100%; background: #F5F5F5; padding: 10px 0; box-shadow: -1px 0px 0px #CCC inset;}
+.ct_right{overflow-y: auto; height: 100%; background: #FFF; margin-left: 200px; padding: 10px;}
 
 /* Left */
 .left_title{cursor: pointer; width: 90%; padding: 5px 0; font-size: 12px; color: #999; font-weight: bold; border-bottom: #CCC 1px solid; box-shadow: 0 1px 0 #FFF; margin: 0 auto;}
